--- a/src/pages/articles/transforming-home-maintenance-and-improvement.mdx
+++ b/src/pages/articles/transforming-home-maintenance-and-improvement.mdx
@@ -1,20 +1,26 @@
 import { ArticleLayout } from '@/components/ArticleLayout'
 
 export const meta = {
-  author: 'Adam Wathan',
-  date: '2022-09-02',
-  title: 'Introducing Animaginary: High performance web animations',
+  author: 'Jordan Bain',
+  date: '2024-01-02',
+  title: 'Transforming Home Maintenance and Improvement',
   description:
-    'When you’re building a website for a company as ambitious as Planetaria, you need to make an impression. I wanted people to visit our website and see animations that looked more realistic than reality itself.',
+    'Explore how IslandFixx is simplifying home maintenance and improvement in Trinidad and Tobago with its comprehensive platform connecting homeowners with top-tier service professionals. Learn how IslandFixx is reshaping the way customers find, book, and manage home services, ensuring quality, reliability, and satisfaction every step of the way.',
 }
 
 export default (props) => <ArticleLayout meta={meta} {...props} />
 
-When you’re building a website for a company as ambitious as Planetaria, you need to make an impression. I wanted people to visit our website and see animations that looked more realistic than reality itself.
+Welcome to IslandFixx, your ultimate destination for all your home service needs in Trinidad and Tobago. We understand the challenges homeowners face when it comes to finding reliable and trustworthy service providers for their homes. That's why we've created a revolutionary platform that connects you with top-notch service professionals, making home maintenance and improvements easier than ever before.
 
-To make this possible, we needed to squeeze every drop of performance out of the browser possible. And so Animaginary was born.
+At IslandFixx, we believe in quality, reliability, and professionalism. That's why we handpick each service provider in our network, ensuring they meet the highest standards of excellence. Whether you need a plumber, electrician, landscaper, or any other home service professional, IslandFixx has you covered.
 
-```js
+What sets us apart is our dedication to customer satisfaction. With our multi-provider support system, you have access to an unlimited selection of service professionals, giving you the freedom to choose the right provider for your specific needs. Plus, our user-friendly platform makes booking and managing home services a breeze.
+
+But IslandFixx is more than just a service marketplace – it's a community. We're committed to building lasting relationships with our customers and service providers alike, fostering trust and reliability every step of the way.
+
+So why settle for anything less than the best? Join the IslandFixx community today and discover a new way to maintain and improve your home.
+
+{/* ```js
 import { animate } from '@planetaria/animaginary'
 
 export function MyComponent({ open, children }) {
@@ -98,4 +104,4 @@ windows_binary_esports(87734, array(restoreRomTopology, adRaw(407314),
 
 Sit volat naturam; motu Cancri. Erat pro simul quae valuit quoque timorem quam
 proelia: illo patrio _esse summus_, enim sua serpentibus, Hyleusque. Est coniuge
-recuso; refert Coroniden ignotos manat, adfectu.
+recuso; refert Coroniden ignotos manat, adfectu. */}
